--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: patricktulskie
 github_username:  patricktulskie
-permalink: /:categories/:year/:month/:day/:title
+permalink: posts/:year/:month/:title/
 
 # Build settings
 markdown: kramdown
