--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,13 @@ email: patricktulskie@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Patrick Tulskie dot com
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://patricktulskie.com" # the base hostname & protocol for your site
 twitter_username: patricktulskie
 github_username:  patricktulskie
 permalink: posts/:year/:month/:title/
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - jekyll-sitemap
