Part 2 of overhaul

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ url: "http://patricktulskie.com" # the base hostname & protocol for your site
 twitter_username: patricktulskie
 github_username:  patricktulskie
 permalink: posts/:year/:month/:title/
+logo:
+  url: "img/sunglasses.jpg"
 
 # Build settings
 markdown: kramdown
